--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "antd": "^3.19.2",
     "axios": "^0.18.0",
     "babel-plugin-import": "^1.11.0",
+    "braft-editor": "^2.3.7",
     "connected-react-router": "^6.4.0",
     "customize-cra": "^0.2.12",
     "history": "^4.9.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-app-rewired": "^2.1.1",
