--- a/package.json
+++ b/package.json
@@ -3,26 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.9.3",
-    "antd": "^3.19.2",
-    "axios": "^0.18.0",
-    "babel-plugin-import": "^1.11.0",
+    "@material-ui/core": "^4.3.1",
+    "antd": "^3.21.2",
+    "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.0",
     "braft-editor": "^2.3.7",
-    "connected-react-router": "^6.4.0",
-    "customize-cra": "^0.2.12",
+    "connected-react-router": "^6.5.2",
+    "customize-cra": "^0.4.1",
     "history": "^4.9.0",
     "less": "^3.9.0",
-    "less-loader": "^4.1.0",
-    "lodash": "^4.17.11",
+    "less-loader": "^5.0.0",
+    "lodash": "^4.17.15",
     "moment": "^2.24.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-app-rewired": "^2.1.1",
+    "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
-    "react-redux": "^7.0.2",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "2.1.8",
-    "redux": "^4.0.1",
+    "react-redux": "^7.1.0",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "^3.0.1",
+    "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0"
@@ -41,5 +41,6 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "proxy": "http://localhost:8000"
 }
