--- a/public/manifest.json
+++ b/public/manifest.json
@@ -13,9 +13,14 @@
       "sizes": "512x512"
     },
     {
-      "src": "saa-logo.png",
+      "src": "SAA-logo-color.png",
       "type": "image/png",
       "sizes": "192x192"
+    },
+    {
+      "src": "SAA-logo-color.png",
+      "type": "image/png",
+      "sizes": "144x144"
     }
   ],
   "start_url": "./",
