--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "alumni-frontend",
-  "version": "0.1.6",
+  "version": "0.1.9",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.8.3",
@@ -19,6 +19,8 @@
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
+    "react-images": "^1.1.0-beta.3",
+    "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.3.0",
